--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,6 +5,8 @@ application.js: application-fadff89cab133efb282501c45991b646.js
 application/index.js: application-fadff89cab133efb282501c45991b646.js
 application.css: application-9ded63fd528c7b2d6d50b8582ea54302.css
 application/index.css: application-9ded63fd528c7b2d6d50b8582ea54302.css
+jumbotron-narrow.css: jumbotron-narrow-53b2da3b6fd08795fd0e799a93e88123.css
+jumbotron-narrow/index.css: jumbotron-narrow-53b2da3b6fd08795fd0e799a93e88123.css
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
